# rust-web-app

./: Cargo.toml  README.md
.cargo/: dev-services.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-rpc-core/src/: error.rs
crates/libs/lib-rpc-core/src/rpcs/: mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: envs.rs  errors.rs  lib.rs  proc.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/_dev_utils/: dev_service_registry.rs  mod.rs
crates/libs/lib-web/src/handlers/: handlers_rpc.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs
crates/libs/lib-web/src/utils/: mod.rs  service_resolution.rs  token.rs  web_client.rs
crates/services/llm-worker/: Cargo.toml
crates/services/llm-worker/examples/: quick_dev.rs
crates/services/llm-worker/src/: error.rs  main.rs
crates/services/llm-worker/src/rpc/: genai_chat_rpc.rs  genai_model_rpc.rs  mod.rs
crates/services/llm-worker/src/web/: mod.rs  routes_rpc.rs
crates/services/web-gateway/: Cargo.toml
crates/services/web-gateway/examples/: quick_dev.rs
crates/services/web-gateway/src/: config.rs  main.rs
crates/services/web-gateway/src/web/rpcs/: agent_rpc.rs  conv_rpc.rs
docs/: README.md
docs/00_base-rust-web-app/: E00 - Rust Axum Intro.md  E01 - Intro to production.md  E05 - Rust RPC Router.md  RustWebApp_DesignDiagrams.md
docs/00_base-rust-web-app/puml/: axum-intro-req-res-sequence.puml
docs/01_refactor_lib_rpc_lib_web/: README_Rust10x_RefactoringChanges.md  Rust10x_REFACTOR_librpc.md  Rust10x_REFACTOR_libweb.md
docs/02_worker_architecture/: 0_README_WorkerArchitecture.md  CodingChallengesAndTips.md  LLM_Worker.md  RPC_RoutingChanges.md  UUID_RequestCallChain.md  Worker_ServiceResolution.md
docs/02_worker_architecture/puml/: eda_hubspoke_explore.puml  rpc_swimlane_activity.puml  worker_axum_diffs.puml  worker_components.puml  worker_deployment.puml  worker_load_resolve_info.puml
docs/03_event_driven_architecture/: 0_README_EventDrivenArchitecture.md
docs/03_event_driven_architecture/puml/: eda_components.puml
