[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",      # e.g., base64, time.
    "crates/libs/lib-rpc-core",   # e.g., core rpc utils (using rpc-router crate)
    "crates/libs/lib-auth",       # e.g., for pwd, token.
    "crates/libs/lib-core",       # e.g., model, ctx, config.
    "crates/libs/lib-web",        # e.g., logging, common middleware etc

    # -- Application Services    
    "crates/services/web-gateway",  # Gateway auth and reverse-proxy
    "crates/services/llm-worker",   # reverse-proxy sinks: Workers
    
    # -- Tools
    "crates/tools/gen-key", 
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }

# -- Data
# Note: we lock modql version during rcs
modql = { version = "0.4.1", features = ["with-sea-query"]}
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-time" ] }

# -- JSON-RPC
# Lock to specific version during 0.1.x
rpc-router = { version = "=0.2.0-alpha.1" } 

# -- Web
axum = {version = "0.8", features = ["macros"]}
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"

# -- Others
# NOTE: time is set as `<0.3.35` to match sea-query-binder version 0.6.0-rc.2 (see https://github.com/SeaQL/sea-query/issues/772)
#       will set back to `0.3` as soon as sea-query-binder 0.6.0-rc is fix
time = {version = "<0.3.35", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
uuid = {version = "1", features = ["v4","fast-rng","serde"]}
regex = "1.10.5"

# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }