[package]
name = "lib-web"
version = "0.1.0"
edition = "2021"

[features]
dev-utils = []

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-rpc-core = { path = "../../libs/lib-rpc-core"}
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}

# -- Async
tokio = { version = "1", features = ["full"] }

# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }

# -- Web
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true}

# -- Rpc
rpc-router = { workspace = true }

# -- Web
reqwest = {version = "0.12", features = ["json"]}
#reqwest-eventsource = "0.6"
#eventsource-stream = "0.2"

# -- Others
time = { workspace = true }
uuid = { workspace = true }
strum_macros = "0.26"
derive_more = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
